figuring out google and github auth issues

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI= mongodb+srv://fatimahkamal_db_user:HYjVmXM88hpAhO0A@cluster0.hqmmxrz.mongodb.net/Books
 SESSION_SECRET=some-long-secret
-BASE_URL= http://127.0.0.1:3000/ # change to https://your-render-app.onrender.com after deploy
+BASE_URL= https://books-q5q7.onrender.com
 GOOGLE_CLIENT_ID=...
 GOOGLE_CLIENT_SECRET=...
 GITHUB_CLIENT_ID=...
